# policy_crew

./: .dockerignore  .gitignore  Dockerfile  README.md  answer.md  app.py  notes.md  pyproject.toml  report.md  requirements.txt  streamlit_app.py  verified.md
.github/workflows/: main_policywordexplainer.yml
db/: chroma.sqlite3
src/ai_researcher/: crew.py  fast_crew.py  main.py
src/ai_researcher/config/: agents.yaml  tasks.yaml
src/ai_researcher/db/: chroma.sqlite3
