[project]
name = "ai_researcher"
version = "0.1.0"
description = "AI_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
ai_researcher = "ai_researcher.main:run"
run_crew = "ai_researcher.main:run"
train = "ai_researcher.main:train"
replay = "ai_researcher.main:replay"
test = "ai_researcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
